# python-fastapi-template

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: format.yml  pytest.yml
app/v1/routers/users/: users_router.py
tests/v1/routers/: test_users.py  test_users_4xx.py
