[project]
name = "python-fastapi-template"
version = "0.1.0"
description = "A template for a Python FastAPI service with uv & Devcontainer"
authors = ["Ibraheem Tuffaha <ibraheem.z.tuffaha@gmail.com>"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.8",
]


[dependency-groups]
dev = [
    "autoflake>=2.3.1",
    "black>=25.1.0",
    "flake8>=7.1.2",
    "isort>=6.0.0",
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "wemake-python-styleguide>=1.0.0",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
src_paths = ["app", "tests"]
lines_between_types = 1
lines_after_imports = 2

[tool.mypy]
strict = true
pretty = true

[tool.pytest.ini_options]
addopts = "--cov=app --cov-branch --cov-report=term --cov-report=html --cov-fail-under=100"
